2001-12-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_SetHints):
	fixed window getting frozen into position upon a recapture or restart

2001-12-17  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Fixup wording in EWMHIconicStateWorkaround.

2001-12-17  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm2.1:
	Tried to clarify the EWMHIconicStateWorkaround BugOpts

	* fvwm/ewmh.c (delete_kst_item):
	(set_kde_sys_tray):
	(EWMH_IsKdeSysTrayWindow):
	(EWMH_ManageKdeSysTray):
	* fvwm/events.c (HandleReparentNotify):
	Fixed reparenting management of kde system tray windows and
	added some off debugging code

	* fvwm/virtual.c (CMD_DesktopName):
	Removed some debugging code

2001-12-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.h (struct):
	* fvwm/window_flags.h (IS_FIXED_PPOS):
	* fvwm/style.h (SCSET_IS_FIXED_PPOS):
	* fvwm/style.c (parse_and_set_window_style):
	(check_window_style_change):
	implemented new styles FixedPPosition, FixedUSPosition, FixedSize,
	FixedUSSize, FixedPSize and Variable PPosition, ...

	* fvwm/events.c (HandleConfigureRequest):
	* fvwm/ewmh.c (ewmh_AllowsResize):
	(is_resize_allowed):
	(ewmh_AllowsMove):
	(ewmh_AllowsMove):
	* fvwm/gnome.c (GNOME_SetHints):
	(AnimatedMoveAnyWindow):
	(CMD_ResizeMove):
	use new functions
	* fvwm/move_resize.c (is_move_allowed):
	(is_resize_allowed):
	(is_maximize_allowed):
	new functions to clean up some code

2001-12-15  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Doc fixups.

2001-12-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/builtins (CMD_BugOpts):
	* fvwm/ewmh.c:
	* fvwm/ewmh_conf.c (EWMH_BugOpts):
	* fvwm/ewmh_events.c (ewmh_StateHidden):
	* fvwm/fvwm.c (InitVariables):
	* fvwm/fvwm2.1:
	* fvwm/icons.c (CMD_Iconify):
	* fvwm/screen.h:
	* fvwm/virtual.c (unmap_window):
	(map_window):
	Implemented the new _NET_WM_STATE_HIDDEN ewmh state that allows
	to fix the IconicState problems in vitrual.c. New BugOpts
	EWMHIconicStateWorkaround for supporting current KDE versions
