@@ -5216,27 +5216,27 @@ windows.  By default, the opposite style,
 .I AllowRestack
 is active.
 
-.IR FixedPosition and FixedUSPosition
+.IR FixedPosition " and " FixedUSPosition
 make fvwm ignore attempts of the user to move the window.  It is
 still possible to move the window by resizing is.  To allow the
 user to move windows, use the
 .IR VariablePosition or VariableUSPosition
 style.
 
-.IR FixedSize and FixedUSSize
+.IR FixedSize " and " FixedUSSize
 make fvwm ignore attempts of the user to resize the window.  To
-allow the user user to resize windows, use the
-.IR VariableSize or VariableUSSize
+allow the user to resize windows, use the
+.IR VariableSize " or " VariableUSSize
 style.
 
-.IR FixedPPosition and FixedPSize
+.IR FixedPPosition " and " FixedPSize
 make fvwm ignore attempts of the program to move or resize its
 windows.  To allow this kind of actions, use the
-.IR VariablePPosition or VariablePSize
+.IR VariablePPosition " or " VariablePSize
 style.  These styles may sometimes affect the initial placement
 and dimensions of new windows (depending on the application).  If
 windows are created at strange places, try eihter the
-.IR VariablePPosition or NoPPosition
+.IR VariablePPosition " or " NoPPosition
 styles.  The
 .I FixedPSize
 style may screw up window dimensions for some applications.  Don't
