@@ -1,3 +1,8 @@
+2001-12-19  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmScript/Instructions.c (FuncSendMsgAndGet):
+	Be more safe
+
 2001-12-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.c (swallow):
