@@ -1,3 +1,11 @@
+2001-12-19  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/ewmh_names.c (convert_charsets):
+	More precise error messages
+
+	* fvwm/fvwm2.1:
+	A few formatting fixes
+
 2001-12-18  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/gnome.c (GNOME_SetHints):
